# Night-owl

./: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json
backend/: .gitignore  pyproject.toml  requirements.txt
backend/load_model/: google_search_api.py  perplexity_score.py  speech_to_text.py  text_generation.py  text_to_speech.py
backend/orchestration/: interview.py
backend/state_definition/: state.py
prisma/: schema.prisma
python_backend/: graph.py  main.py  requirements.txt
scripts/: auth_smoke.mjs  db_smoke.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/auth/me/: route.ts
src/app/api/auth/register/: route.ts
src/app/api/context/docx/: route.ts
src/app/api/context/youtube/: route.ts
src/app/api/deepgram/stt/: route.ts
src/app/api/deepgram/tts/: route.ts
src/app/api/evaluate/: route.ts
src/app/api/interview/context/ingest/: route.ts
src/app/api/interview/cycle/: route.ts
src/app/api/interview/session/end/: route.ts
src/app/api/interview/session/start/: route.ts
src/app/api/oa/end/: route.ts
src/app/api/oa/event/: route.ts
src/app/api/oa/start/: route.ts
src/app/api/quiz/: route.ts
src/app/api/roadmap/: route.ts
src/app/api/video/: route.ts
src/app/interview/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/app/stage/[id]/: page.tsx
src/components/: FocusMonitor.tsx  InterviewUI.tsx
src/lib/: auth.ts  prisma.ts
src/types/: youtube-transcript.d.ts
